# iris.d

./: Cargo.toml  README.md
src/: commands.pest  lib.rs  main.rs
src/core/: client.rs  server.rs
src/core/client/: local.rs
src/util/: config.rs
